language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_missing.move
module M {
    struct S { f: u64 }

    fun t0(s: S, sref: &S, s_mut: &mut S) {
        s.g;
        sref.g;
        s_mut.h;
    }
}
